y.output
Terminals unused in grammar

   IDENTIFIER
   FOR


Grammar

    0 $accept: Program $end

    1 Program: %empty
    2        | Function Program

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    4 Declaration: Identifiers COLON INTEGER
    5            | Identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    6 Declarations: %empty
    7             | Declaration SEMICOLON Declarations

    8 Identifiers: Ident
    9            | Ident COMMA Identifiers

   10 Statements: Statement SEMICOLON Statements
   11           | Statement SEMICOLON

   12 Statement: Var ASSIGN Expression
   13          | IF BoolExp THEN Statements ElseStatement ENDIF
   14          | WHILE BoolExp BEGINLOOP Statements ENDLOOP
   15          | DO BEGINLOOP Statements ENDLOOP WHILE BoolExp
   16          | FOREACH Ident IN Ident BEGINLOOP Statements ENDLOOP
   17          | READ Vars
   18          | WRITE Vars
   19          | CONTINUE
   20          | RETURN Expression

   21 ElseStatement: %empty
   22              | ELSE Statements

   23 Var: Ident L_SQUARE_BRACKET Expression R_SQUARE_BRACKET
   24    | Ident

   25 Vars: Var
   26     | Var COMMA Vars

   27 Expression: MultExp
   28           | MultExp ADD Expression
   29           | MultExp SUB Expression

   30 Expressions: %empty
   31            | Expression COMMA Expressions
   32            | Expression

   33 MultExp: Term
   34        | Term MULT MultExp
   35        | Term DIV MultExp
   36        | Term MOD MultExp

   37 Term: Var
   38     | SUB Var
   39     | NUMBER
   40     | SUB NUMBER
   41     | L_PAREN Expression R_PAREN
   42     | SUB L_PAREN Expression R_PAREN
   43     | Ident L_PAREN Expressions R_PAREN

   44 BoolExp: RAExp
   45        | RAExp OR BoolExp

   46 RAExp: RExp
   47      | RExp AND RAExp

   48 RExp: NOT RExp1
   49     | RExp1

   50 RExp1: Expression Comp Expression
   51      | TRUE
   52      | FALSE
   53      | L_PAREN BoolExp R_PAREN

   54 Comp: EQ
   55     | NEQ
   56     | LT
   57     | GT
   58     | LTE
   59     | GTE

   60 Ident: IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENT (258) 60
NUMBER (259) 5 39 40
FUNCTION (260) 3
IDENTIFIER (261)
BEGIN_PARAMS (262) 3
SEMICOLON (263) 3 7 10 11
END_PARAMS (264) 3
BEGIN_LOCALS (265) 3
END_LOCALS (266) 3
BEGIN_BODY (267) 3
END_BODY (268) 3
COMMA (269) 9 26 31
COLON (270) 4 5
INTEGER (271) 4 5
ARRAY (272) 5
L_SQUARE_BRACKET (273) 5 23
R_SQUARE_BRACKET (274) 5 23
OF (275) 5
NEQ (276) 55
IF (277) 13
THEN (278) 13
ENDIF (279) 13
ELSE (280) 22
WHILE (281) 14 15
BEGINLOOP (282) 14 15 16
ENDLOOP (283) 14 15 16
DO (284) 15
FOREACH (285) 16
IN (286) 16
FOR (287)
READ (288) 17
WRITE (289) 18
CONTINUE (290) 19
OR (291) 45
AND (292) 47
NOT (293) 48
L_PAREN (294) 41 42 43 53
R_PAREN (295) 41 42 43 53
EQ (296) 54
LT (297) 56
GT (298) 57
LTE (299) 58
GTE (300) 59
TRUE (301) 51
FALSE (302) 52
RETURN (303) 20
SUB (304) 29 38 40 42
ADD (305) 28
MULT (306) 34
DIV (307) 35
MOD (308) 36
ASSIGN (309) 12


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
Program (56)
    on left: 1 2, on right: 0 2
Function (57)
    on left: 3, on right: 2
Declaration (58)
    on left: 4 5, on right: 7
Declarations (59)
    on left: 6 7, on right: 3 7
Identifiers (60)
    on left: 8 9, on right: 4 5 9
Statements (61)
    on left: 10 11, on right: 3 10 13 14 15 16 22
Statement (62)
    on left: 12 13 14 15 16 17 18 19 20, on right: 10 11
ElseStatement (63)
    on left: 21 22, on right: 13
Var (64)
    on left: 23 24, on right: 12 25 26 37 38
Vars (65)
    on left: 25 26, on right: 17 18 26
Expression (66)
    on left: 27 28 29, on right: 12 20 23 28 29 31 32 41 42 50
Expressions (67)
    on left: 30 31 32, on right: 31 43
MultExp (68)
    on left: 33 34 35 36, on right: 27 28 29 34 35 36
Term (69)
    on left: 37 38 39 40 41 42 43, on right: 33 34 35 36
BoolExp (70)
    on left: 44 45, on right: 13 14 15 45 53
RAExp (71)
    on left: 46 47, on right: 44 45 47
RExp (72)
    on left: 48 49, on right: 46 47
RExp1 (73)
    on left: 50 51 52 53, on right: 48 49
Comp (74)
    on left: 54 55 56 57 58 59, on right: 50
Ident (75)
    on left: 60, on right: 3 8 9 16 23 24 43


State 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Program   go to state 2
    Function  go to state 3


State 1

    3 Function: FUNCTION . Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 4

    Ident  go to state 5


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


State 3

    2 Program: Function . Program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Program   go to state 7
    Function  go to state 3


State 4

   60 Ident: IDENT .

    $default  reduce using rule 60 (Ident)


State 5

    3 Function: FUNCTION Ident . SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    SEMICOLON  shift, and go to state 8


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    2 Program: Function Program .

    $default  reduce using rule 2 (Program)


State 8

    3 Function: FUNCTION Ident SEMICOLON . BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 9


State 9

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS . Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 6 (Declarations)

    Declaration   go to state 10
    Declarations  go to state 11
    Identifiers   go to state 12
    Ident         go to state 13


State 10

    7 Declarations: Declaration . SEMICOLON Declarations

    SEMICOLON  shift, and go to state 14


State 11

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations . END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    END_PARAMS  shift, and go to state 15


State 12

    4 Declaration: Identifiers . COLON INTEGER
    5            | Identifiers . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    COLON  shift, and go to state 16


State 13

    8 Identifiers: Ident .
    9            | Ident . COMMA Identifiers

    COMMA  shift, and go to state 17

    $default  reduce using rule 8 (Identifiers)


State 14

    7 Declarations: Declaration SEMICOLON . Declarations

    IDENT  shift, and go to state 4

    $default  reduce using rule 6 (Declarations)

    Declaration   go to state 10
    Declarations  go to state 18
    Identifiers   go to state 12
    Ident         go to state 13


State 15

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS . BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 19


State 16

    4 Declaration: Identifiers COLON . INTEGER
    5            | Identifiers COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 20
    ARRAY    shift, and go to state 21


State 17

    9 Identifiers: Ident COMMA . Identifiers

    IDENT  shift, and go to state 4

    Identifiers  go to state 22
    Ident        go to state 13


State 18

    7 Declarations: Declaration SEMICOLON Declarations .

    $default  reduce using rule 7 (Declarations)


State 19

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS . Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 4

    $default  reduce using rule 6 (Declarations)

    Declaration   go to state 10
    Declarations  go to state 23
    Identifiers   go to state 12
    Ident         go to state 13


State 20

    4 Declaration: Identifiers COLON INTEGER .

    $default  reduce using rule 4 (Declaration)


State 21

    5 Declaration: Identifiers COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 24


State 22

    9 Identifiers: Ident COMMA Identifiers .

    $default  reduce using rule 9 (Identifiers)


State 23

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations . END_LOCALS BEGIN_BODY Statements END_BODY

    END_LOCALS  shift, and go to state 25


State 24

    5 Declaration: Identifiers COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 26


State 25

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 27


State 26

    5 Declaration: Identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 28


State 27

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IDENT     shift, and go to state 4
    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    FOREACH   shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    CONTINUE  shift, and go to state 35
    RETURN    shift, and go to state 36

    Statements  go to state 37
    Statement   go to state 38
    Var         go to state 39
    Ident       go to state 40


State 28

    5 Declaration: Identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 41


State 29

   13 Statement: IF . BoolExp THEN Statements ElseStatement ENDIF

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    NOT      shift, and go to state 43
    L_PAREN  shift, and go to state 44
    TRUE     shift, and go to state 45
    FALSE    shift, and go to state 46
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 49
    MultExp     go to state 50
    Term        go to state 51
    BoolExp     go to state 52
    RAExp       go to state 53
    RExp        go to state 54
    RExp1       go to state 55
    Ident       go to state 56


State 30

   14 Statement: WHILE . BoolExp BEGINLOOP Statements ENDLOOP

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    NOT      shift, and go to state 43
    L_PAREN  shift, and go to state 44
    TRUE     shift, and go to state 45
    FALSE    shift, and go to state 46
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 49
    MultExp     go to state 50
    Term        go to state 51
    BoolExp     go to state 57
    RAExp       go to state 53
    RExp        go to state 54
    RExp1       go to state 55
    Ident       go to state 56


State 31

   15 Statement: DO . BEGINLOOP Statements ENDLOOP WHILE BoolExp

    BEGINLOOP  shift, and go to state 58


State 32

   16 Statement: FOREACH . Ident IN Ident BEGINLOOP Statements ENDLOOP

    IDENT  shift, and go to state 4

    Ident  go to state 59


State 33

   17 Statement: READ . Vars

    IDENT  shift, and go to state 4

    Var    go to state 60
    Vars   go to state 61
    Ident  go to state 40


State 34

   18 Statement: WRITE . Vars

    IDENT  shift, and go to state 4

    Var    go to state 60
    Vars   go to state 62
    Ident  go to state 40


State 35

   19 Statement: CONTINUE .

    $default  reduce using rule 19 (Statement)


State 36

   20 Statement: RETURN . Expression

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 64
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 37

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements . END_BODY

    END_BODY  shift, and go to state 65


State 38

   10 Statements: Statement . SEMICOLON Statements
   11           | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 39

   12 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 67


State 40

   23 Var: Ident . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET
   24    | Ident .

    L_SQUARE_BRACKET  shift, and go to state 68

    $default  reduce using rule 24 (Var)


State 41

    5 Declaration: Identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 69


State 42

   39 Term: NUMBER .

    $default  reduce using rule 39 (Term)


State 43

   48 RExp: NOT . RExp1

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 44
    TRUE     shift, and go to state 45
    FALSE    shift, and go to state 46
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 49
    MultExp     go to state 50
    Term        go to state 51
    RExp1       go to state 70
    Ident       go to state 56


State 44

   41 Term: L_PAREN . Expression R_PAREN
   53 RExp1: L_PAREN . BoolExp R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    NOT      shift, and go to state 43
    L_PAREN  shift, and go to state 44
    TRUE     shift, and go to state 45
    FALSE    shift, and go to state 46
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 71
    MultExp     go to state 50
    Term        go to state 51
    BoolExp     go to state 72
    RAExp       go to state 53
    RExp        go to state 54
    RExp1       go to state 55
    Ident       go to state 56


State 45

   51 RExp1: TRUE .

    $default  reduce using rule 51 (RExp1)


State 46

   52 RExp1: FALSE .

    $default  reduce using rule 52 (RExp1)


State 47

   38 Term: SUB . Var
   40     | SUB . NUMBER
   42     | SUB . L_PAREN Expression R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 73
    L_PAREN  shift, and go to state 74

    Var    go to state 75
    Ident  go to state 40


State 48

   37 Term: Var .

    $default  reduce using rule 37 (Term)


State 49

   50 RExp1: Expression . Comp Expression

    NEQ  shift, and go to state 76
    EQ   shift, and go to state 77
    LT   shift, and go to state 78
    GT   shift, and go to state 79
    LTE  shift, and go to state 80
    GTE  shift, and go to state 81

    Comp  go to state 82


State 50

   27 Expression: MultExp .
   28           | MultExp . ADD Expression
   29           | MultExp . SUB Expression

    SUB  shift, and go to state 83
    ADD  shift, and go to state 84

    $default  reduce using rule 27 (Expression)


State 51

   33 MultExp: Term .
   34        | Term . MULT MultExp
   35        | Term . DIV MultExp
   36        | Term . MOD MultExp

    MULT  shift, and go to state 85
    DIV   shift, and go to state 86
    MOD   shift, and go to state 87

    $default  reduce using rule 33 (MultExp)


State 52

   13 Statement: IF BoolExp . THEN Statements ElseStatement ENDIF

    THEN  shift, and go to state 88


State 53

   44 BoolExp: RAExp .
   45        | RAExp . OR BoolExp

    OR  shift, and go to state 89

    $default  reduce using rule 44 (BoolExp)


State 54

   46 RAExp: RExp .
   47      | RExp . AND RAExp

    AND  shift, and go to state 90

    $default  reduce using rule 46 (RAExp)


State 55

   49 RExp: RExp1 .

    $default  reduce using rule 49 (RExp)


State 56

   23 Var: Ident . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET
   24    | Ident .
   43 Term: Ident . L_PAREN Expressions R_PAREN

    L_SQUARE_BRACKET  shift, and go to state 68
    L_PAREN           shift, and go to state 91

    $default  reduce using rule 24 (Var)


State 57

   14 Statement: WHILE BoolExp . BEGINLOOP Statements ENDLOOP

    BEGINLOOP  shift, and go to state 92


State 58

   15 Statement: DO BEGINLOOP . Statements ENDLOOP WHILE BoolExp

    IDENT     shift, and go to state 4
    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    FOREACH   shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    CONTINUE  shift, and go to state 35
    RETURN    shift, and go to state 36

    Statements  go to state 93
    Statement   go to state 38
    Var         go to state 39
    Ident       go to state 40


State 59

   16 Statement: FOREACH Ident . IN Ident BEGINLOOP Statements ENDLOOP

    IN  shift, and go to state 94


State 60

   25 Vars: Var .
   26     | Var . COMMA Vars

    COMMA  shift, and go to state 95

    $default  reduce using rule 25 (Vars)


State 61

   17 Statement: READ Vars .

    $default  reduce using rule 17 (Statement)


State 62

   18 Statement: WRITE Vars .

    $default  reduce using rule 18 (Statement)


State 63

   41 Term: L_PAREN . Expression R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 96
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 64

   20 Statement: RETURN Expression .

    $default  reduce using rule 20 (Statement)


State 65

    3 Function: FUNCTION Ident SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY .

    $default  reduce using rule 3 (Function)


State 66

   10 Statements: Statement SEMICOLON . Statements
   11           | Statement SEMICOLON .

    IDENT     shift, and go to state 4
    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    FOREACH   shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    CONTINUE  shift, and go to state 35
    RETURN    shift, and go to state 36

    $default  reduce using rule 11 (Statements)

    Statements  go to state 97
    Statement   go to state 38
    Var         go to state 39
    Ident       go to state 40


State 67

   12 Statement: Var ASSIGN . Expression

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 98
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 68

   23 Var: Ident L_SQUARE_BRACKET . Expression R_SQUARE_BRACKET

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 99
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 69

    5 Declaration: Identifiers COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 5 (Declaration)


State 70

   48 RExp: NOT RExp1 .

    $default  reduce using rule 48 (RExp)


State 71

   41 Term: L_PAREN Expression . R_PAREN
   50 RExp1: Expression . Comp Expression

    NEQ      shift, and go to state 76
    R_PAREN  shift, and go to state 100
    EQ       shift, and go to state 77
    LT       shift, and go to state 78
    GT       shift, and go to state 79
    LTE      shift, and go to state 80
    GTE      shift, and go to state 81

    Comp  go to state 82


State 72

   53 RExp1: L_PAREN BoolExp . R_PAREN

    R_PAREN  shift, and go to state 101


State 73

   40 Term: SUB NUMBER .

    $default  reduce using rule 40 (Term)


State 74

   42 Term: SUB L_PAREN . Expression R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 102
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 75

   38 Term: SUB Var .

    $default  reduce using rule 38 (Term)


State 76

   55 Comp: NEQ .

    $default  reduce using rule 55 (Comp)


State 77

   54 Comp: EQ .

    $default  reduce using rule 54 (Comp)


State 78

   56 Comp: LT .

    $default  reduce using rule 56 (Comp)


State 79

   57 Comp: GT .

    $default  reduce using rule 57 (Comp)


State 80

   58 Comp: LTE .

    $default  reduce using rule 58 (Comp)


State 81

   59 Comp: GTE .

    $default  reduce using rule 59 (Comp)


State 82

   50 RExp1: Expression Comp . Expression

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 103
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 83

   29 Expression: MultExp SUB . Expression

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 104
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 84

   28 Expression: MultExp ADD . Expression

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 105
    MultExp     go to state 50
    Term        go to state 51
    Ident       go to state 56


State 85

   34 MultExp: Term MULT . MultExp

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var      go to state 48
    MultExp  go to state 106
    Term     go to state 51
    Ident    go to state 56


State 86

   35 MultExp: Term DIV . MultExp

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var      go to state 48
    MultExp  go to state 107
    Term     go to state 51
    Ident    go to state 56


State 87

   36 MultExp: Term MOD . MultExp

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    Var      go to state 48
    MultExp  go to state 108
    Term     go to state 51
    Ident    go to state 56


State 88

   13 Statement: IF BoolExp THEN . Statements ElseStatement ENDIF

    IDENT     shift, and go to state 4
    IF        shift, and go to state 29
    WHILE     shift, and go to state 30
    DO        shift, and go to state 31
    FOREACH   shift, and go to state 32
    READ      shift, and go to state 33
    WRITE     shift, and go to state 34
    CONTINUE  shift, and go to state 35
    RETURN    shift, and go to state 36

    Statements  go to state 109
    Statement   go to state 38
    Var         go to state 39
    Ident       go to state 40


State 89

   45 BoolExp: RAExp OR . BoolExp

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    NOT      shift, and go to state 43
    L_PAREN  shift, and go to state 44
    TRUE     shift, and go to state 45
    FALSE    shift, and go to state 46
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 49
    MultExp     go to state 50
    Term        go to state 51
    BoolExp     go to state 110
    RAExp       go to state 53
    RExp        go to state 54
    RExp1       go to state 55
    Ident       go to state 56


State 90

   47 RAExp: RExp AND . RAExp

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    NOT      shift, and go to state 43
    L_PAREN  shift, and go to state 44
    TRUE     shift, and go to state 45
    FALSE    shift, and go to state 46
    SUB      shift, and go to state 47

    Var         go to state 48
    Expression  go to state 49
    MultExp     go to state 50
    Term        go to state 51
    RAExp       go to state 111
    RExp        go to state 54
    RExp1       go to state 55
    Ident       go to state 56


State 91

   43 Term: Ident L_PAREN . Expressions R_PAREN

    IDENT    shift, and go to state 4
    NUMBER   shift, and go to state 42
    L_PAREN  shift, and go to state 63
    SUB      shift, and go to state 47

    $default  reduce using rule 30 (Expressions)

    Var          go to state 48
    Expression   go to state 112
    Expressions  go to state 113
    MultExp      go to state 50
    Term         go to state 51
    Ident        go to state 56


State 92

   14 Statement: WHILE BoolExp BEGINLOOP . Statements ENDLOOP
